--- a/templates/content/workouts/workout-list.html
+++ b/templates/content/workouts/workout-list.html
@@ -3,7 +3,7 @@
 {% load content_filters %}
 {% block page_content %}
 
-<div class="container">
+<div class="container" style="align-items: normal">
     <div class="row row-cols-2 row-cols-md-5 g-4">
 
         <div class="col workout-box" style="height:100%; align-content: center">
