Goal Description icon; Reading list; favourite exercises
The goal description now shows in a modal when the user clicks on the icon next to the goal name. But only in the Management panel

Reading list and Favourite Exercises list were created as models
Trainees can add exercises and articles to the lists.

--- a/templates/content/articles/articles-list.html
+++ b/templates/content/articles/articles-list.html
@@ -41,9 +41,18 @@
                      <span><img src="{{ article.author.profile_picture }}" height="25px" width="25px" alt=""></span>
                     {% else %}
                     {{ article.author }}
-
                     {% endif %}
                 </div>
+                <div class="card-footer">
+                    <a href="{% url 'add to reading list' pk=article.pk %}">
+                        {% if not article in reading_list %}
+                            Add to reading list
+                        {% else %}
+                            Remove from reading list
+                        {% endif %}
+                    </a>
+                </div>
+
             </div>
         </div>
     {% endfor %}
