--- a/templates/content/workouts/create-workout.html
+++ b/templates/content/workouts/create-workout.html
@@ -32,18 +32,18 @@
             </div>
         </div>
     </div>
-    <script>
-    let ok = document.querySelectorAll('.select-field select')[0]
-    console.log(ok)
-    ok.addEventListener('click', ()=>{
-        console.log(ok.value)
-        if (ok.value === '17') {
-            document.getElementById('reps').style.display = 'block'
-        }
-        else if (ok.value === '18'){
-            document.getElementById('duration').style.display = 'block'
-
-        }
-    })
-    </script>
+{#    <script>#}
+{#    let ok = document.querySelectorAll('.select-field select')[0]#}
+{#    console.log(ok)#}
+{#    ok.addEventListener('click', ()=>{#}
+{#        console.log(ok.value)#}
+{#        if (ok.value === '17') {#}
+{#            document.getElementById('reps').style.display = 'block'#}
+{#        }#}
+{#        else if (ok.value === '18'){#}
+{#            document.getElementById('duration').style.display = 'block'#}
+{##}
+{#        }#}
+{#    })#}
+{#    </script>#}
 {% endblock %}
