Profile Dashboard enhancements
The dashboard now has a navigation menu.
The user can check their stats for every year, their goals, latest workouts, reading list and favourite exercises.
The dashboard needs styling improvements as it doesn't sit well at the moment, but it's usable.
The page content shows and hides with some little js code.

--- a/staticfiles/styles/profile-dashboard.css
+++ b/staticfiles/styles/profile-dashboard.css
@@ -21,3 +21,24 @@
 #prime-deactivate:hover {
     color:darkred;
 }
+
+.dashboard-nav-menu {
+    display:flex;
+    flex-direction:column;
+    background-color: steelblue;
+    height:80vh;
+    min-width:230px;
+    justify-content: center;
+}
+
+.dashboard-nav-menu a:hover {
+    color:lightgoldenrodyellow;
+}
+.dashboard-nav-menu a {
+    font-size: 24px;
+    text-decoration: none;
+    text-align:center;
+    color: white;
+    margin-top:15px;
+    margin-bottom:15px;
+}
