--- a/templates/content/exercises/exercises-list.html
+++ b/templates/content/exercises/exercises-list.html
@@ -25,15 +25,7 @@
               </div>
               <button><a href="{% url 'exercise details' slug=exercise.slug %}">Details</a></button>
     {#          TODO: create the add to favorites mechanism      #}
-                <button>
-                    <a href="{% url 'favourite exercise' pk=exercise.pk %}">
-                        {% if not exercise in user_faves %}
-                            Add to favorites
-                        {% else %}
-                            Remove from favorites
-                        {% endif %}
-                    </a>
-                </button>
+                {% include 'partials/content/add-exericse-to-favourites.html' %}
               <div class="card-footer">
                 <small class="text-muted">Body parts:
                     {% for part in exercise.body_parts %}
