--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 
 {% load static %}
-<nav class="nav-bar navbar">
+<nav class="nav-bar navbar main-nav">
     <div class="nav-logo">
         Logo <i class="fa-solid fa-dumbbell"></i> here
     </div>
