--- a/templates/profiles/trainee/profile-details.html
+++ b/templates/profiles/trainee/profile-details.html
@@ -4,6 +4,44 @@
 
 {% block page_content %}
 <div class="container profile-dashboard">
+    <nav class="dashboard-nav-menu">
+        <a href="#" id="stats-nav-link" class="trainee-dashboard-nav-link">
+            Stats
+        </a>
+        <a href="#" id="goals-nav-link" class="trainee-dashboard-nav-link">
+            Goals
+        </a>
+        <a href="#" id="workouts-nav-link" class="trainee-dashboard-nav-link">
+            Workouts
+        </a>
+        <a href="#" id="favourites-nav-link" class="trainee-dashboard-nav-link">
+            Favourite exercises
+        </a>
+        <a href="#" id="reading-nav-link" class="trainee-dashboard-nav-link">
+            Reading List
+        </a>
+    </nav>
+
+
+    <div class="dashboard-content">
+            <div class="trainee-dashboard-section" id="stats-section">
+                {% include 'partials/trainee-dashboard/stats.html' %}
+            </div>
+            <div class="trainee-dashboard-section" id="goals-section">
+                {% include 'partials/trainee-dashboard/goals-overview.html' %}
+            </div>
+            <div class="trainee-dashboard-section" id="reading-section">
+                {% include 'partials/trainee-dashboard/reading-list.html' %}
+            </div>
+            <div class="trainee-dashboard-section" id="favourites-section">
+                {% include 'partials/trainee-dashboard/favourite-exercises.html' %}
+            </div>
+            <div class="trainee-dashboard-section" id="workouts-section">
+                {% include 'partials/trainee-dashboard/latest-workouts.html' %}
+            </div>
+    </div>
+
+    </div>
     <div class="card" style="width: 18rem;">
         <img src="{{ traineeprofile.profile.profile_picture }}" class="card-img-top" alt="...">
         <div class="card-body">
@@ -25,14 +63,31 @@
             <a href="{% url 'trainee profile delete' slug=request.user.traineeprofile.slug %}" class="card-link">Delete Account</a>
         </div>
     </div>
-    <div class="dashboard-content">
-        {% include 'partials/trainee-dashboard/goals-overview.html' %}
 
-        {% include 'partials/trainee-dashboard/latest-workouts.html' %}
-
-        Favourite Exercises
-
-
-    </div>
 </div>
+    <script>
+
+    const traineeDashboardNavLinks =
+        Array.from(document.getElementsByClassName('trainee-dashboard-nav-link'))
+    const traineeDashboardSections =
+        Array.from(document.getElementsByClassName('trainee-dashboard-section'))
+
+    function hideSections(){
+        traineeDashboardSections.forEach(section=>section.style.display='none')
+    }
+    hideSections()
+    traineeDashboardSections[0].style.display='block'
+    function showSectionOnNavClick(navBtn){
+
+        let navBtnId = navBtn.getAttribute('id').split('-')[0]
+        let sectionToDisplay = document.getElementById(navBtnId+'-section')
+        hideSections()
+        sectionToDisplay.style.display='block'
+    }
+
+    traineeDashboardNavLinks.forEach(link=>link.addEventListener('click', ()=>{
+        showSectionOnNavClick(link)
+    }))
+
+    </script>
 {% endblock %}
