Contract Model - Coach Hire
Now trainees can hire coaches.
The view checks if the user has an active contract with the coach and if not - a contract is created.
The buttons and notifications are about to be put together.

--- a/staticfiles/styles/profile-dashboard.css
+++ b/staticfiles/styles/profile-dashboard.css
@@ -1,7 +1,7 @@
 .profile-dashboard{
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width:800px;
 }
 
