--- a/templates/content/exercises/exercise.html
+++ b/templates/content/exercises/exercise.html
@@ -11,6 +11,22 @@
 </ul>
 <h4>{{ exercise.type }}</h4>
 <p>{{ exercise.description }}</p>
+
+
+    <div>
+        <h1>RATING</h1>
+        <form action="" method="post">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <button>Submit</button>
+        </form>
+    </div>
+
+
 {% include 'partials/content/add-exericse-to-favourites.html' %}
     <div><a href="{% url 'exercises list' %}">Back to all exercises</a></div>
 {% endblock %}
+
+<script>
+    document.getElementById('rating-field').style.display='none'
+</script>
