--- a/templates/profiles/trainer/view-for-trainees/trainer-details.html
+++ b/templates/profiles/trainer/view-for-trainees/trainer-details.html
@@ -39,6 +39,8 @@
                         {% endfor %}
                     </h3>
                     <h3><small class="text-muted">Years of professional experience: </small> {{ trainer.years_experience }}</h3>
+                    <h3><small class="text-muted">Times hired: </small> {{ times_hired }}</h3>
+                    <h3><small class="text-muted">Active clients: </small> {{ num_active_contracts }}</h3>
                     <h5><i class="fa-solid fa-square-phone"></i> +359-{{ trainer.phone_number }}</h5>
                     <button class="btn btn-outline-light" style="background-color:lightgreen">
                         <a  style="color:black; font-size:20px">
