--- a/templates/profiles/trainer/view-for-trainees/all-trainers.html
+++ b/templates/profiles/trainer/view-for-trainees/all-trainers.html
@@ -1,4 +1,5 @@
 {% extends 'index.html' %}
+{% load content_filters %}
 {% load static %}
 
 {#TODO: list trainers based on membership, rating, if they have profile picture#}
@@ -42,6 +43,8 @@
             <p class="card-text"><small class="text-muted">Years of experience:</small> {{ trainer.years_experience }}</p>
 
               <p><small class="text-muted">Practices:</small> {% for sport in trainer.sports.all %} {{ sport.sport_name }} |{% endfor %}</p>
+              <p><small class="text-muted">Times Hired: </small>{{ trainer|listview_times_hired }}</p>
+
               <button class="btn btn-outline-light"><a href="{% url 'trainer details' slug=trainer.slug %}">Check Biography</a></button>
           </div>
         </div>
