--- a/templates/content/exercises/exercise.html
+++ b/templates/content/exercises/exercise.html
@@ -11,16 +11,17 @@
 </ul>
 <h4>{{ exercise.type }}</h4>
 <p>{{ exercise.description }}</p>
-
-
-    <div>
-        <h1>RATING</h1>
-        <form action="" method="post">
-            {{ form.as_p }}
-            {% csrf_token %}
-            <button>Submit</button>
-        </form>
-    </div>
+    Avg Rating: {{ rating }}
+    {% if not has_user_rating %}
+        <div>
+            <h1>RATING</h1>
+            <form action="" method="post">
+                {{ form.as_p }}
+                {% csrf_token %}
+                <button>Submit</button>
+            </form>
+        </div>
+    {% endif %}
 
 
 {% include 'partials/content/add-exericse-to-favourites.html' %}
