Rating system done, styling pends
Also pends a bit of code optimization to make it reusable and easy to edit as 3 models are depending on these functions across several files.

--- a/templates/content/exercises/exercise.html
+++ b/templates/content/exercises/exercise.html
@@ -11,18 +11,7 @@
 </ul>
 <h4>{{ exercise.type }}</h4>
 <p>{{ exercise.description }}</p>
-    Avg Rating: {{ rating }}
-    {% if not has_user_rating %}
-        <div>
-            <h1>RATING</h1>
-            <form action="" method="post">
-                {{ form.as_p }}
-                {% csrf_token %}
-                <button>Submit</button>
-            </form>
-        </div>
-    {% endif %}
-
+    {% include 'partials/rating.html' %}
 
 {% include 'partials/content/add-exericse-to-favourites.html' %}
     <div><a href="{% url 'exercises list' %}">Back to all exercises</a></div>
