--- a/templates/content/locations/gym-details.html
+++ b/templates/content/locations/gym-details.html
@@ -31,6 +31,7 @@
                     <h3><small class="text-muted">About: </small></h3>
                         {% lorem 3 p %}
                 </div>
+                {% include 'partials/rating.html' %}
             </div>
         </div>
     </div>
