--- a/templates/profiles/trainer/view-for-trainees/trainer-details.html
+++ b/templates/profiles/trainer/view-for-trainees/trainer-details.html
@@ -56,6 +56,7 @@
                     <p>{{ trainer.bio }}</p>
                     {% lorem 2 p %}
                 </div>
+                {% include 'partials/rating.html' %}
 
             </div>
 
